Fix: user simulation password fix (#15)
* Only check if the user is logged in if there is a value

* Fix validation translations in login and register forms

* Add hashing algorith for password

* Fix prod build

* Add hmr for dev environment

* Finish prod build

* Change default port and added permissions to run run-script.sh

* Add -nb flag to not display Scilab info and fix navigating from small window on Experiment list

* Add missing endpoints to REST API documentation and fixed existing endpoints

* Untrack certificates
