# routes/api.php
@@ -17,10 +17,6 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
-});
-
 Route::post('/auth/register', [AuthController::class, 'createUser']);
 Route::post('/auth/login', [AuthController::class, 'loginUser']);
 
@@ -36,4 +32,5 @@ Route::middleware(['auth:sanctum', 'token.refresh'])->group(function () {
 
     Route::get('user/{id}', [UserController::class, 'show']);
     Route::get('users', [UserController::class, 'index']);
+    Route::get('user', [UserController::class, 'loggedInUser']);
 });
